fix: user, attendance 코딩 정리